Statusbar Shortcuts: The 3D View shortcuts are displayed in the Sequencer context when in Transform mode. #83307

Closed
opened 2020-12-02 08:28:51 +01:00 by tintwotin · 10 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Worked: (newest version of Blender that worked as expected)

Short description of error
In Transform mode in the VSE the 3D View shortcuts are displayed:
{F9423557, size=full}

Exact steps for others to reproduce the error

  • Add a strip.
  • Drag it.
  • Notice the shortcuts in the statusbar. Ex. Rotate is displayed, which isn't possible for strips.

Keymaps Mirrored
All of the Sequencer Transform Modal Key Map is just mirrored from the 3D View - in the meaning that if you change anything, it'll also change in the 3D View.
{F9423581, size=full}

A note
Mouse Click shortcuts are also missing from the Statusbar, ex. Alt+Click toggle selects handles and Ctrl+click+mouse position selects left, right and linked in time(sync).
Shift + right click on strip to solo preview movie strip, is also missing.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Worked: (newest version of Blender that worked as expected) **Short description of error** In Transform mode in the VSE the 3D View shortcuts are displayed: {[F9423557](https://archive.blender.org/developer/F9423557/image.png), size=full} **Exact steps for others to reproduce the error** - Add a strip. - Drag it. - Notice the shortcuts in the statusbar. Ex. Rotate is displayed, which isn't possible for strips. **Keymaps Mirrored** All of the Sequencer Transform Modal Key Map is just mirrored from the 3D View - in the meaning that if you change anything, it'll also change in the 3D View. {[F9423581](https://archive.blender.org/developer/F9423581/image.png), size=full} **A note** Mouse Click shortcuts are also missing from the Statusbar, ex. Alt+Click toggle selects handles and Ctrl+click+mouse position selects left, right and linked in time(sync). Shift + right click on strip to solo preview movie strip, is also missing.
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin

Added subscriber: @jenkm

Added subscriber: @jenkm

The problem is that everywhere you look there are wrong keyboard shortcuts.

Timeline: it shows for LMB either Select Keyframes or Change Frame (depending on how you move the mouse) and both are wrong.
UV Editor: it shows Change Frame for LMB.
Select the Annotation tool, and LMB-drag will show Move that is definitely not possible.
Links Cut tool (Nodes): LMB-drag - Box Select...
and so on, and so on...

The problem is that everywhere you look there are wrong keyboard shortcuts. Timeline: it shows for LMB either Select Keyframes or Change Frame (depending on how you move the mouse) and both are wrong. UV Editor: it shows Change Frame for LMB. Select the Annotation tool, and LMB-drag will show Move that is definitely not possible. Links Cut tool (Nodes): LMB-drag - Box Select... and so on, and so on...
Author

Is there a bug report of this, or is it on a To Do list somewhere? This seems to have been included in several releases already, so maybe should be priotized higher, since Blender is still quite shortcut-key-centric, and it simply leaves a bad impression that pretty much all shortcut-key-hints in the status bar are wrong outside of the 3D View.

Is there a bug report of this, or is it on a To Do list somewhere? This seems to have been included in several releases already, so maybe should be priotized higher, since Blender is still quite shortcut-key-centric, and it simply leaves a bad impression that pretty much all shortcut-key-hints in the status bar are wrong outside of the 3D View.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm.
In fact this is something that was overlooked.

Thanks for the report, I can confirm. In fact this is something that was overlooked.

This issue was referenced by c822f66bb8

This issue was referenced by c822f66bb83eaa0baf90ce662375c0b0aefb9dec

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-12-07 21:36:41 +01:00
Author

@mano-wii Thank you for the patch which nicely removes the most misleading shortcut hints.

I noticed this comment: /* Allows the 'Expand to fit' effect to be enabled as a toogle. */ do you mean as a key toggle or even as a button toggle? So it does what this patch does(for ripple)? https://developer.blender.org/D9699

One thing to be aware of is that having shortcuts exposed in the header is not in consistency with anything else in Blender and is completely overlooked even by seasoned VSE users. In fact 99% of VSE users do not know about this Extend to fit function. So in the long run a better solution, where the transform keymap of the 3d view isn't used in the VSE, should be found, but instead a VSE centric transform keymap is exposed in the statusbar.

There are also several of other keyboard shortcuts not exposed in the statusbar like click + alt will toggle through various handle selection options, click + ctrl on strip will select all clips with the same in and out points, click+ctrl in empty space will select everything on that side of the playhead etc. Even a hidden feature like the 3d View Walk/Fly Navigation gets the shortcuts properly exposed in the statusbar, but the vse specific shortcuts doesn't.

@mano-wii Thank you for the patch which nicely removes the most misleading shortcut hints. I noticed this comment: `/* Allows the 'Expand to fit' effect to be enabled as a toogle. */` do you mean as a key toggle or even as a button toggle? So it does what this patch does(for ripple)? https://developer.blender.org/D9699 One thing to be aware of is that having shortcuts exposed in the header is not in consistency with anything else in Blender and is completely overlooked even by seasoned VSE users. In fact 99% of VSE users do not know about this Extend to fit function. So in the long run a better solution, where the transform keymap of the 3d view isn't used in the VSE, should be found, but instead a VSE centric transform keymap is exposed in the statusbar. There are also several of other keyboard shortcuts not exposed in the statusbar like click + alt will toggle through various handle selection options, click + ctrl on strip will select all clips with the same in and out points, click+ctrl in empty space will select everything on that side of the playhead etc. Even a hidden feature like the 3d View Walk/Fly Navigation gets the shortcuts properly exposed in the statusbar, but the vse specific shortcuts doesn't.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83307
No description provided.